# django-human-resources-api

./: pyproject.toml  readme.md
itmss_api/: manage.py
itmss_api/core/: filters.py  models.py  serializers.py  views.py
itmss_api/core/migrations/: 0001_initial.py
itmss_api/itmss_api/: asgi.py  settings.py  urls.py  wsgi.py
